# PaperMoon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  project_direction.md  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 94c479ca6dcd_add_task_id_to_documents.py  b7d2e9f4a3c1_add_content_hash_to_documents.py  c1a2b3d4e5f6_create_users_table.py  cffae742cd66_create_documents_table.py  d2b3c4e5f6a7_add_user_id_to_documents.py  e3c4d5f6a7b8_create_conversations_and_messages.py
app/: main.py
app/agent/: agent_service.py  graph_agent.py  graph_build.py  schemas.py  tool_defs.py  tool_schemas.py  tools.py
app/core/: config.py  context.py  database.py  errors.py  logging.py  middleware.py  rate_limit.py  security.py
app/models/: __init__.py  conversation.py  document.py  user.py
app/repositories/: conversation_repository.py  document_repository.py  user_repository.py
app/schemas/: auth.py  chat.py  conversation.py  document.py
app/services/: _openai_retry.py  auth_service.py  chunking_service.py  (+9 more)
frontend/: next.config.ts  package-lock.json  package.json
model_service/: Dockerfile  pyproject.toml  pyrightconfig.json
model_service/app/: config.py  main.py  routes.py  schemas.py
model_service/tests/: conftest.py  test_model_service.py
scripts/: agent_eval_questions.json  baseline_questions.json  cleanup_documents.py  hard_questions.json  run_agent_eval.py  run_eval.py
storage/: a1b53eab-8678-4260-b063-cd8801c0b35a.md
tests/: conftest.py  test_agent.py  test_agent_stream.py  test_auth.py  test_chat.py  test_chunking.py  test_conversations.py  test_document_parser.py  test_documents.py  test_embedding.py  test_error_format.py  test_graph_agent.py  test_health.py  test_reconcile.py  test_remote_llm.py  test_repository.py  test_rerank.py  test_retrieval_scope.py  test_task.py  test_tools.py
(+62 files in other folders)
