[project]
name = "papermoon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pytest>=9.0.3",
]

[project.scripts]
start = "app.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
